feat: ajuste de frontend + endpoints de backend requeridos añadidos